Fixes Like icon aligning to the left under Bootstrap 5 #911

--- a/Dnn.CommunityForums/themes/community-bootstrap/theme.css
+++ b/Dnn.CommunityForums/themes/community-bootstrap/theme.css
@@ -231,6 +231,9 @@
 .dnn-community-forums .dcf-topic-view .dcf-prev-next .fa-next .fa {
   margin-left: 0.5em;
 }
+.dnn-community-forums .dcf-topic-view .dcf-post-likes .fa {
+  font-size: 1.5rem;
+}
 .dnn-community-forums .dcf-topic-view .dcf-topic-content {
   width: 100%;
 }
